--- a/tool/aframe-inventions copy 2.html
+++ b/tool/aframe-inventions copy 2.html
@@ -14,7 +14,9 @@
     <a-scene background="color: #000">
       <a-plane rotation="-90 0 0" width="50" height="25" color="#111" shadow></a-plane>
 
-       <!-- MindLink Messaging Booth, centered at (-10, 0, 0) -->
+      <!-- MindLink Messaging -->
+          <a-scene background="color: #181e25" embedded>
+      <!-- MindLink Messaging Booth, centered at (-10, 0, 0) -->
       <a-entity position="-10 0 0">
         <!-- Booth base platform -->
         <a-cylinder radius="1.08" height="0.05" position="0 0 -3"
@@ -94,6 +96,7 @@
                angle="38" penumbra="0.45" position="-10 3.0 -2.5" target="-10 1.5 -3"></a-light>
       <!-- Camera (centered on the new booth region) -->
       <a-entity camera position="-10 1.5 1.5" look-controls wasd-controls></a-entity>
+    </a-scene>
 
       <a-cylinder position="-12 0.5 -3" radius="0.4" height="1.2" color="#808080"></a-cylinder>
 
