Thu, May 15, 2025, 10:46 PM -04:00

--- a/tool/aframe-inventions copy 2.html
+++ b/tool/aframe-inventions copy 2.html
@@ -16,6 +16,7 @@
 
       <!-- MindLink Messaging -->
    <a-entity position="-10 0 0">
+    <a-scene background="color: #181e25" embedded>
       <!-- Floor reflection -->
       <a-cylinder radius="1.08" height="0.05" position="0 0 0"
                   color="#23282e" metalness="0.7" roughness="0.14" opacity="0.97"></a-cylinder>
@@ -36,10 +37,6 @@
       <a-box width="0.91" height="0.17" depth="0.03"
              position="0 2.59 0.97"
              color="#bfc8cf" metalness="0.93" roughness="0.19"></a-box>
-      <!-- Glowing sign text -->
-      <a-entity text="value: MIND READING\nSTATION; align: center; width: 2.1; color: #fff; font: roboto; letterSpacing: 8;"
-                position="0 2.60 1.01"
-                material="color: #fff; emissive: #c0eaff; emissiveIntensity: 1.2"></a-entity>
       <!-- Holographic info screens -->
       <a-plane width="0.34" height="0.13" color="#2cf0ff" opacity="0.11"
                position="-0.38 1.55 -0.23" rotation="0 10 0"></a-plane>
