--- a/tool/aframe-inventions copy.html
+++ b/tool/aframe-inventions copy.html
@@ -59,8 +59,8 @@
       <!-- Floor reflection -->
       <a-plane rotation="-90 0 0" width="50" height="25" color="#222" material="metalness:0.7; roughness:0.1; opacity:0.95"></a-plane>
 
-      <!-- Smart Translator - scaled down by 15% -->
-      <a-entity scale="0.85 0.85 0.85">
+      <!-- Smart Translator -->
+      
         <!-- Device Body (rounded, metallic, glowing edge) -->
         <a-entity>
           <a-box position="0 1 -3" depth="0.23" height="1.5" width="1"
