--- a/tool/aframe-inventions.html
+++ b/tool/aframe-inventions.html
@@ -1,9 +1,9 @@
 <html>
   <head>
     <title>Invention Showcase</title>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
     <style>
-      
+
       body {
         margin: 0;
         overflow: hidden;
@@ -11,7 +11,10 @@
     </style>
   </head>
   <body>
-    <a-scene background="color: #000">
+    <a-scene background="color: #333">
+      <a-scene background="color: #dbe9f4">
+
+
       <a-plane rotation="-90 0 0" width="50" height="25" color="#111" shadow></a-plane>
 
       <!-- MindLink Messaging -->
@@ -82,31 +85,160 @@
       <!-- Smart Translator -->
       <a-entity position="0 0 0">
 
-        <a-entity position="0 1 -3">
-          <a-box color="#2ecc71" depth="0.5" height="0.8" width="0.3" position="0 0.4 0" roughness="0.8"></a-box>
-          <a-box color="#34495e" depth="0.05" height="0.2" width="0.25" position="0 0.65 0.26"></a-box>
-          <a-cylinder color="#d35400" radius="0.03" height="0.2" position="0 0.95 0.26"></a-cylinder>
-          <a-plane position="0 0.3 0.26" width="0.2" height="0.3" color="#2980b9" material="opacity: 0.8"></a-plane>
-          <a-entity geometry="primitive: plane; width: 0.18; height: 0.28" material="color: #1abc9c; side: double"
-            text="value: Hello (EN) -> Hola (ES); align: center; color: #fff; wrapCount: 20" position="0 0.3 0.27"></a-entity>
-          <a-box position="-0.1 0.05 0.26" depth="0.05" height="0.05" width="0.05" color="#e74c3c"></a-box>
-          <a-box position="0 0.05 0.26" depth="0.05" height="0.05" width="0.05" color="#f39c12"></a-box>
-          <a-box position="0.1 0.05 0.26" depth="0.05" height="0.05" width="0.05" color="#3498db"></a-box>
-        </a-entity>
+      <!-- Smart Translator - scaled down by 15% -->
+      <a-entity scale="0.85 0.85 0.85">
+        <!-- Device Body (rounded, metallic, glowing edge) -->
         <a-entity>
-          <a-ring position="-0.5 1 -3" radius-inner="0.05" radius-outer="0.1" color="#f1c40f"
-            animation="property: scale; to: 2 2 2; dir: alternate; loop: true; dur: 1000"></a-ring>
-          <a-ring position="-0.5 1 -3" radius-inner="0.15" radius-outer="0.2" color="#f39c12"
-            animation="property: scale; to: 2 2 2; dir: alternate; loop: true; delay: 200; dur: 1000"></a-ring>
-          <a-ring position="0.5 1 -3" radius-inner="0.05" radius-outer="0.1" color="#27ae60"
-            animation="property: scale; to: 2 2 2; dir: alternate; loop: true; dur: 1000"></a-ring>
-          <a-ring position="0.5 1 -3" radius-inner="0.15" radius-outer="0.2" color="#2ecc71"
-            animation="property: scale; to: 2 2 2; dir: alternate; loop: true; delay: 200; dur: 1000"></a-ring>
+          <a-box position="0 1 -3" depth="0.23" height="1.5" width="1"
+            material="color: #111a33; metalness: 0.9; roughness: 0.15; opacity:0.97"
+            radius="0.1"></a-box>
+          <!-- Vents (bottom front) -->
+          <a-box position="-0.3 0.26 -2.895" width="0.14" height="0.02" depth="0.015" color="#444"></a-box>
+          <a-box position="0 0.26 -2.895" width="0.14" height="0.02" depth="0.015" color="#444"></a-box>
+          <a-box position="0.3 0.26 -2.895" width="0.14" height="0.02" depth="0.015" color="#444"></a-box>
+          <!-- Side vents -->
+          <a-box position="-0.52 0.5 -3" width="0.01" height="0.1" depth="0.06" color="#444"></a-box>
+          <a-box position="0.52 0.5 -3" width="0.01" height="0.1" depth="0.06" color="#444"></a-box>
+          <!-- Charging port (front center) -->
+          <a-cylinder position="0 0.24 -2.995" radius="0.025" height="0.01" color="#00cfff"></a-cylinder>
         </a-entity>
-        <a-box color="#e67e22" position="-0.5 0.5 -3" depth="0.3" width="0.3" height="1.5"></a-box>
-        <a-sphere color="#f39c12" position="-0.5 1.7 -3" radius="0.2"></a-sphere>
-        <a-box color="#2980b9" position="0.5 0.5 -3" depth="0.3" width="0.3" height="1.5"></a-box>
-        <a-sphere color="#3498db" position="0.5 1.7 -3" radius="0.2"></a-sphere>
+
+        <!-- Top Text (screen) -->
+        <a-text value="Smart Translator" position="0 1.69 -2.86" width="1.5" align="center" color="#f5f6fa" font="kelsonsans"></a-text>
+
+        <!-- Display Area (rows, icons, bars) -->
+        <a-entity position="0 1.35 -2.855">
+          <a-text value="IT  Reazdeziolerc      2:30" position="-0.44 0.10 0" width="1.7" align="left" color="#00f6ff" font="kelsonsans" ></a-text>
+          <a-text value="ES  Ddiranasoion      3:01" position="-0.44 0.02 0" width="1.7" align="left" color="#00ff99" font="kelsonsans"></a-text>
+          <a-text value="AU  Dab-0-20            3:29" position="-0.44 -0.05 0" width="1.7" align="left" color="#00eaff" font="kelsonsans"></a-text>
+          <!-- Bar (below text) -->
+          <a-box position="0 -0.09 0" width="0.85" height="0.015" depth="0.005" color="#333" material="metalness:0.5"></a-box>
+        </a-entity>
+
+        <!-- Dial (centered, layered, glowing, inner circle) -->
+        <a-entity>
+          <a-cylinder position="0 0.66 -2.83" radius="0.16" height="0.04"
+            rotation="90 0 0"
+            material="color: #0ff; metalness:1; roughness:0.1; opacity:0.8; emissive: #00ffe6; emissiveIntensity:0.6"></a-cylinder>
+          <a-ring position="0 0.66 -2.825" radius-inner="0.17" radius-outer="0.21"
+            material="color: #fff; opacity: 0.32; emissive: #00ffe6; emissiveIntensity:0.3"></a-ring>
+          <a-ring position="0 0.66 -2.82" radius-inner="0.12" radius-outer="0.135"
+            material="color: #fff; opacity:0.9; emissive: #00d8f8; emissiveIntensity:0.9"></a-ring>
+          <a-ring position="0 0.66 -2.815" radius-inner="0.095" radius-outer="0.105"
+            material="color: #fff; opacity:0.7; emissive: #00ffff; emissiveIntensity:0.7"></a-ring>
+          <a-cylinder position="0 0.66 -2.795" radius="0.058" height="0.005"
+            rotation="90 0 0"
+            material="color: #0ff; metalness:1; roughness:0.1; opacity:0.7; emissive: #00ffe6; emissiveIntensity:0.7"></a-cylinder>
+        </a-entity>
+
+        <!-- Circular Icon Buttons around dial -->
+        <a-entity>
+          <a-cylinder position="0.21 0.66 -2.88" radius="0.022" height="0.018" material="color: #fff; emissive: #00ffe6; emissiveIntensity:1"></a-cylinder>
+          <a-cylinder position="0.15 0.78 -2.88" radius="0.022" height="0.018" material="color: #fff; emissive: #00ffe6; emissiveIntensity:1"></a-cylinder>
+          <a-cylinder position="0 0.83 -2.88" radius="0.022" height="0.018" material="color: #fff; emissive: #00ffe6; emissiveIntensity:1"></a-cylinder>
+          <a-cylinder position="-0.15 0.78 -2.88" radius="0.022" height="0.018" material="color: #fff; emissive: #00ffe6; emissiveIntensity:1"></a-cylinder>
+          <a-cylinder position="-0.21 0.66 -2.88" radius="0.022" height="0.018" material="color: #fff; emissive: #00ffe6; emissiveIntensity:1"></a-cylinder>
+          <a-cylinder position="-0.15 0.54 -2.88" radius="0.022" height="0.018" material="color: #fff; emissive: #00ffe6; emissiveIntensity:1"></a-cylinder>
+          <a-cylinder position="0 0.49 -2.88" radius="0.022" height="0.018" material="color: #fff; emissive: #00ffe6; emissiveIntensity:1"></a-cylinder>
+          <a-cylinder position="0.15 0.54 -2.88" radius="0.022" height="0.018" material="color: #fff; emissive: #00ffe6; emissiveIntensity:1"></a-cylinder>
+        </a-entity>
+
+        <!-- Volume Icon -->
+        <a-entity position="0.42 1.58 -2.82">
+          <a-box position="0 0 0" depth="0.01" height="0.12" width="0.03" color="#ecf0f1"></a-box>
+          <a-cylinder position="0.05 0.03 0" radius="0.018" height="0.07" color="#ecf0f1" rotation="0 0 90"></a-cylinder>
+          <a-cylinder position="0.085 0.05 0" radius="0.012" height="0.09" color="#ecf0f1" rotation="0 0 90"></a-cylinder>
+        </a-entity>
+
+        <!-- Glow lighting from device -->
+        <a-light type="point" position="0 1 -2.65" intensity="1" color="#00d8f8" distance="2"></a-light>
+        <a-light type="ambient" color="#444"></a-light>
+      </a-entity>
+
+      <!-- Pencil -->
+      <a-entity>
+        <!-- Main Body (sleek, dark metallic) -->
+        <a-cylinder
+          position="0.8 0.9 -2.89"
+          radius="0.0135"
+          height="0.32"
+          rotation="0 0 0"
+          material="color: #222c2e; metalness: 0.95; roughness: 0.09; opacity: 1">
+        </a-cylinder>
+
+        <!-- Grip Section -->
+        <a-cylinder
+          position="0.8 1.05 -2.89"
+          radius="0.016"
+          height="0.26"
+          rotation="0 0 0"
+          material="color: #282f35; metalness: 0.4; roughness: 0.5">
+        </a-cylinder>
+
+        <!-- metallic bands -->
+        <a-torus
+          position="0.8 0.98 -2.89"
+          radius="0.016"
+          radius-tubular="0.002"
+          rotation="90 0 0"
+          material="color: #b7eaff; metalness: 1; roughness: 0.07; emissive: #88eaff; emissiveIntensity: 0.5">
+        </a-torus>
+        <a-torus
+          position="0.8 1.08 -2.89"
+          radius="0.016"
+          radius-tubular="0.002"
+          rotation="90 0 0"
+          material="color: #b7eaff; metalness: 1; roughness: 0.07; emissive: #88eaff; emissiveIntensity: 0.7">
+        </a-torus>
+        <a-torus
+          position="0.8 1.12 -2.89"
+          radius="0.016"
+          radius-tubular="0.0015"
+          rotation="90 0 0"
+          material="color: #b7eaff; metalness: 1; roughness: 0.07; emissive: #b7eaff; emissiveIntensity: 0.9">
+        </a-torus>
+
+        <!-- Stylus Tip -->
+        <a-cone
+          position="0.8 0.74 -2.89"
+          radius-bottom="0.011"
+          radius-top="0.002"
+          height="0.045"
+          rotation="0 0 0"
+          material="color: #ffe066; metalness: 1; roughness: 0.12; emissive: #fff5b1; emissiveIntensity: 0.2">
+        </a-cone>
+
+        <a-sphere
+          position="0.8 1.2 -2.89"
+          radius="0.012"
+          material="color: #222c2e; metalness: 1; roughness: 0.2">
+        </a-sphere>
+
+        <!-- Glowing blue ring -->
+        <a-ring
+          position="0.8 1.18 -2.89"
+          rotation="90 0 0"
+          radius-inner="0.013"
+          radius-outer="0.016"
+          material="color: #13f0ff; emissive: #13f0ff; emissiveIntensity: 1; metalness: 0.7">
+        </a-ring>
+
+        <!-- Filler Cylinder -->
+        <a-cylinder
+          position="0.8 1.20 -2.89"
+          radius="0.007"
+          height="0.009"
+          rotation="0 0 0"
+          material="color: #b7eaff; metalness: 1; roughness: 0.18">
+        </a-cylinder>
+
+        <a-cylinder
+          position="0.8 1.185 -2.89"
+          radius="0.004"
+          height="0.012"
+          rotation="0 0 0"
+          material="color: #13f0ff; metalness: 1; roughness: 0.06; emissive: #13f0ff; emissiveIntensity: 0.7">
+        </a-cylinder>
       </a-entity>
 
       <a-cylinder position="-2 0.5 -3" radius="0.4" height="1.2" color="#808080"></a-cylinder>
