--- a/tool/aframe-inventions.html
+++ b/tool/aframe-inventions.html
@@ -84,29 +84,27 @@
 
       <!-- Smart Translator -->
       <a-entity position="0 0 0">
-
-      <!-- Smart Translator - scaled down by 15% -->
       <a-entity scale="0.85 0.85 0.85">
-        <!-- Device Body (rounded, metallic, glowing edge) -->
+        <!-- Device Body -->
         <a-entity>
           <a-box position="0 1 -3" depth="0.23" height="1.5" width="1"
             material="color: #111a33; metalness: 0.9; roughness: 0.15; opacity:0.97"
             radius="0.1"></a-box>
-          <!-- Vents (bottom front) -->
+
           <a-box position="-0.3 0.26 -2.895" width="0.14" height="0.02" depth="0.015" color="#444"></a-box>
           <a-box position="0 0.26 -2.895" width="0.14" height="0.02" depth="0.015" color="#444"></a-box>
           <a-box position="0.3 0.26 -2.895" width="0.14" height="0.02" depth="0.015" color="#444"></a-box>
-          <!-- Side vents -->
+
           <a-box position="-0.52 0.5 -3" width="0.01" height="0.1" depth="0.06" color="#444"></a-box>
           <a-box position="0.52 0.5 -3" width="0.01" height="0.1" depth="0.06" color="#444"></a-box>
-          <!-- Charging port (front center) -->
+
           <a-cylinder position="0 0.24 -2.995" radius="0.025" height="0.01" color="#00cfff"></a-cylinder>
         </a-entity>
 
-        <!-- Top Text (screen) -->
+        <!-- Top Text -->
         <a-text value="Smart Translator" position="0 1.69 -2.86" width="1.5" align="center" color="#f5f6fa" font="kelsonsans"></a-text>
 
-        <!-- Display Area (rows, icons, bars) -->
+        <!-- Display Area -->
         <a-entity position="0 1.35 -2.855">
           <a-text value="IT  Reazdeziolerc      2:30" position="-0.44 0.10 0" width="1.7" align="left" color="#00f6ff" font="kelsonsans" ></a-text>
           <a-text value="ES  Ddiranasoion      3:01" position="-0.44 0.02 0" width="1.7" align="left" color="#00ff99" font="kelsonsans"></a-text>
@@ -115,7 +113,7 @@
           <a-box position="0 -0.09 0" width="0.85" height="0.015" depth="0.005" color="#333" material="metalness:0.5"></a-box>
         </a-entity>
 
-        <!-- Dial (centered, layered, glowing, inner circle) -->
+        <!-- Dial -->
         <a-entity>
           <a-cylinder position="0 0.66 -2.83" radius="0.16" height="0.04"
             rotation="90 0 0"
@@ -157,7 +155,7 @@
 
       <!-- Pencil -->
       <a-entity>
-        <!-- Main Body (sleek, dark metallic) -->
+        
         <a-cylinder
           position="0.8 0.9 -2.89"
           radius="0.0135"
